# system

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  Rules.make  configure  cursor.tga
CMake/: generate_compile_h.cmake  generate_version_h.cmake  isomaker.sh  style-checker.sh
arch/: Arch.make  Makefile  config.in
arch/arm/: Arch.make  Makefile  config.in  head.S  linker.ld  temp.c
arch/x86/: Arch.make  CMakeLists.txt  Makefile  acpi.c  agp.c  apic.c  apm.c  arch.cmake  backtrace_frame.c  backtrace_guess.c  backtrace_user.c  base.S  base_64.S  bios.S  bios.c  bios32.c  clock.c  config.in  cpuid.c  descriptor.c  descriptor_32.c  dmi.c  earlycon.c  elf.c  exception.c  head.S  head_32.S  head_64.S  hpet.c  i8042.c  i8253.c  i8259.c  init_64.c  irq.c  linker.ld  linker_32.ld  linker_64.ld  memory.c  memory_dump.c  mmap.c  (+24 more)
arch/x86/acpi/: acpi.c  ec.c  ec.h  glue.c
arch/x86/include/arch/: acpi.h  agp.h  apic.h  apm.h  asm.h  asm_32.h  asm_64.h  bios.h  bios32.h  bitops.h  bitsperlong.h  cache.h  cmos.h  context_switch.h  cpuid.h  descriptor.h  descriptor_32.h  descriptor_64.h  descriptor_common.h  dma.h  dmi.h  earlycon.h  exception.h  hpet.h  i8042.h  i8253.h  i8259.h  idle.h  io.h  irq.h  isr.h  memory.h  mmap.h  mp.h  msr.h  mtrr.h  multiboot.h  mutex.h  nmi.h  opcode.h  (+33 more)
arch/x86/mm/: cache.c  mtrr.c  page.c  page_mmio.c  page_print.c  pat.c
common/: CMakeLists.txt  bitset.c  bzero.c  defs.h  memcmp.c  memcpy.c  memmove.c  mempcpy.c  mempcpy.h  memset.c  stpcpy.c  stpcpy.h  stpncpy.c  stpncpy.h  strchr.c  strcmp.c  strcpy.c  strcspn.c  strlcpy.c  strlen.c  strncmp.c  strncpy.c  strnlen.c  strrchr.c  strspn.c  strstr.c  strtok_r.c
common/include/common/: bits.h  bitset.h  compiler.h  list.h  macro.h
common/x86/: bzero.c  bzero.h  memcpy.c  mempcpy.c  mempcpy.h  memset.c  stpcpy.c  stpcpy.h  strchr.c  strcmp.c  strcpy.c  strlen.c  strncmp.c  strnlen.c  strrchr.c
drivers/: CMakeLists.txt  config.in  debug_monitor.c  debugmon.c  test.c
drivers/block/: Makefile  ahci.c  ahci.h  ahci_dump.c  ata.c  ata.h  blkdev.c  diskimg.c  floppy.c  floppy.h  gpt.c  ide.c  ide.h  mbr.c  sata.h  scsi.h
drivers/char/: Makefile  bochsfb.c  console.c  console.h  console_config.h  console_driver.h  debugcon.c  dummycon.c  egacon.c  egacon.h  fbcon.c  fbcon.h  font.c  font.h  framebuffer.c  framebuffer.h  glyph.h  keyboard.c  keyboard.h  mem.c  mouse.c  serial.c  serial.h  textcon.c  textcon.h  tty.c  tty.h  tty_driver.h  tty_ldisc.c  tty_ldisc.h  vesafb.c  vga.c  vga.h  virtio.c  virtio.h  virtio_console.c  virtio_gpu.c  virtio_gpu.h  vmwarefb.c  voodoofb.c
drivers/usb/: ehci.c  ehci.h  mem_pool.c  mem_pool.h  uhci.c  uhci.h  usb.h  usb_descriptors.h  usb_device.c  usb_device.h  usb_driver.h  usb_hc.c  usb_hc.h  usb_msd.c  usb_msd.h  xhci.c  xhci.h
drivers/video/: bochsfb.c  framebuffer.c  vesafb.c  vgafb.c  video.c  video_driver.h  virtio_gpu.c  virtio_gpu.h  vmwarefb.c  vmwarefb.h  voodoofb.c
fs/: CMakeLists.txt  Makefile  buffer.c  config.in  dentry.c  file_system.c  files.c  inode.c  ioctl.c  lookup.c  open.c  path.c  pipe.c  read_write.c  readdir.c  select.c  seq_file.c
fs/devfs/: devfs.c
fs/ext2/: ext2.c  ext2.h
fs/fat/: init.c
fs/iso9660/: iso9660.c  iso9660.h
fs/mbfs/: mbfs.c
fs/procfs/: procfs.c  procfs.h
fs/ramfs/: ramfs.c  ramfs.h
fs/rootfs/: root.c
fs/sysfs/: sysfs.c
fs/tarfs/: tarfs.c
include/kernel/: abs.h  backtrace.h  binary.h  bitflag.h  bitset.h  blkdev.h  buffer.h  byteorder.h  clock.h  compile.h.in  compiler.h  cpu.h  ctype.h  debug.h  dentry.h  dev.h  devfs.h  device.h  dirent.h  div.h  elf.h  errno.h  exec.h  (+77 more)
init/: CMakeLists.txt  init.c  temp_shell.c
kernel/: CMakeLists.txt  clock.c  config.in  device.c  errno.c  fmalloc.c  font.c  init.c  kmalloc.c  ksyms.c  malloc.c  memory.c  module.c  panic.c  printk.c  process.c  reboot.c  sched.c  sections.c  signal.c  slab.c  slab_classes.h  symbol.c  test.c  time.c  timer.c  usyms.c  vm.c  vm_print.c
lib/: CMakeLists.txt  abort.c  assert.c  atexit.c  atoi.c  bsearch.c  bss.c  buffer.c  confstr.c  confstr.h  crt0.c  crt0_shared.c  crti.S  crtn.S  ctype.c  dirent.c  dlfcn.c  env.c  errno.c  error.c  exec.c  fcntl.c  ftruncate.c  getcwd.c  getenv.c  gethostname.c  getopt.c  getpagesize.c  grp.c  inttypes.c  isatty.c  libc.h  libc_main.c  list.h  locale.c  magic.h  malloc.c  malloc.h  malloc_size_classes.h  math.c  (+32 more)
lib/include/: assert.h  bitset.h  ctype.h  dirent.h  dlfcn.h  errno.h  error.h  fcntl.h  getopt.h  grp.h  inttypes.h  limits.h  locale.h  math.h  mnent.h  mntent.h  pwd.h  sched.h  setjmp.h  signal.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdio_ext.h  stdlib.h  string.h  strings.h  syslog.h  termios.h  time.h  unistd.h
lib/include/bits/: getopt.h
lib/include/sys/: ioctl.h  mman.h  mount.h  param.h  poll.h  resource.h  select.h  socket.h  stat.h  statvfs.h  syscall.h  sysmacros.h  time.h  types.h  ucontext.h  utime.h  vfs.h  wait.h
lib/loader/: CMakeLists.txt  elf.c  elf.h  helpers.c  lib.h  loader.c  loader.h  loader.ld
lib/stdio/: fclose.c  fflush.c  fgetc.c  file.c  file.h  fopen.c  fpending.c  fprintf.c  fpurge.c  fputc.c  fputs.c  fread.c  fscanf.c  fseek.c  fwrite.c  gnulib.c  printf_buffer.h  printf_buffer_file.h  printf_buffer_string.h  remove.c  scanf.c  setvbuf.c  sprintf.c  stdio.c  stdio_ext.c  tmpnam.c  vsprintf.c
lib/string/: bzero.c  memchr.c  memcmp.c  memcpy.c  memmove.c  memset.c  strcasecmp.c  strcat.c  strchr.c  strcmp.c  strcoll.c  strcpy.c  strdup.c  strlen.c  strpbrk.c  strsignal.c  strspn.c  strstr.c  strtok.c  strxfrm.c
ports/: port.sh
scripts/: 86box.cfg  build.sh  build_bochs.sh  build_filesystem.sh  build_qemu.sh  build_toolchain.sh  ci.in  conf.in  configure.py  configure.sh  configure_ut.py  debugcon.sh  disasm.py  emulator_wrapper.py  font_get.sh  gcc.patch  install_deps.sh  isomaker.sh  kernel.gdb  main_config.in  qemu_bm_fix.patch  regenerate_syscalls.py  run86box.sh  runbochs.sh  rungdb.py  runqemu.sh  runqemu_wrapper.py  script.gdb  setup_clangd.py  usb_flash.sh  utils.sh
tests/: test.c
(+89 files in other folders)
